src/bubbles.css
/* MESSAGES  - - - - - - - - - - - - - - - - - - - - - */
.c19a557985eb7793-contents>.c19a557985eb7793-messageContent {
  background-color: rgba(255, 255, 255, 0.075);
  width: fit-content;
  margin-left: 0px !important;
  padding-left: 0px !important;
  padding: 14px !important;
  border-radius: 0px 10px 10px 0px;
  box-sizing: content-box;
  max-width: 100%;
  word-wrap: normal;
}

._5126c0cd07f243a0-groupStart .c19a557985eb7793-messageContent {
  border-radius: 10px 10px 10px 0px;
}

._5126c0cd07f243a0-message,
.c19a557985eb7793-contents {
  /* position: absolute; */
  max-width: 95% !important;
  min-width: 95% !important;
}

.c19a557985eb7793-buttonContainer ._040f07d21e1fb0d6-container {
  right: 20px;
}

/* More ddex4-like timestamps */
.c19a557985eb7793-header {
  margin-left: 10px;
  margin-bottom: 4px;
  margin-right: 10px;
}

/*
  ._23977d5b7cef7361-reactions {
    margin-bottom: -12px;
  
    width: 100% !important;

    bottom: -16px;

  
    >div {
      position: relative;
  
      ._23977d5b7cef7361-reaction,
      ._23977d5b7cef7361-reactionBtn {
        backdrop-filter: blur(16px);
      }
  
      &:nth-child(1) {
        display: none;
      }
  
      &:nth-child(2) {
        transform: rotate(5deg);
        top: -50%;
      }
  
      &:nth-child(3) {
        transform: rotate(-3deg);
      }
  
      &:nth-child(4) {
        transform: rotate(-7deg);
      }
  
      &:nth-child(5) {
        transform: rotate(8deg);
      }
  
      &:nth-child(6) {
        transform: rotate(8deg);
      }
  
      &:nth-child(7) {
        transform: rotate(17deg);
      }
  
      &:nth-child(8) {
        transform: rotate(9deg);
      }
  
      &:nth-child(9) {
        transform: rotate(2deg);
      }
  
      &:nth-child(10) {
        transform: rotate(5deg);
        top: -50%;
      }
  
      &:nth-child(11) {
        transform: rotate(-3deg);
      }
  
      &:nth-child(12) {
        transform: rotate(-7deg);
      }
  
      &:nth-child(13) {
        transform: rotate(8deg);
      }
  
      &:nth-child(14) {
        transform: rotate(8deg);
      }
  
      &:nth-child(15) {
        transform: rotate(-17deg);
      }
  
      &:nth-child(16) {
        transform: rotate(-3deg);
      }
  
      &:nth-child(17) {
        transform: rotate(2deg);
      }
  
      &:nth-child(18) {
        transform: rotate(-3deg);
      }
  
      &:nth-child(19) {
        transform: rotate(-7deg);
      }
  
      &:nth-child(20) {
        transform: rotate(-5deg);
      }
  
      &:nth-child(21) {
        transform: rotate(-1deg);
      }
    }
  }
  */
._23977d5b7cef7361-reactionInner[aria-label*=", 1 "] ._23977d5b7cef7361-reactionCount {
  display: none !important;
}

/* bring pfp to bottom of messages */
.c19a557985eb7793-avatar,
.c19a557985eb7793-avatarDecoration {
  bottom: 8px;
}

.c19a557985eb7793-messageSpine:before,
.c19a557985eb7793-repliedMessageClickableSpine {
  bottom: -14px;
}

._5126c0cd07f243a0-messageListItem[data-is-self="true"] {
  align-items: end;
  align-content: end;
  justify-content: end;
  justify-items: end;

  ._5126c0cd07f243a0-message {
    /* padding-left: 100%; */
    padding-right: var(--custom-message-margin-left-content-cozy) !important;

    .c19a557985eb7793-contents {
      justify-items: end;
    }

    .c19a557985eb7793-avatar {
      left: auto !important;
      right: var(--custom-message-margin-horizontal);
    }

    .c19a557985eb7793-avatarDecoration {
      left: auto !important;
      right: calc(var(--custom-message-margin-horizontal) - var(--custom-message-avatar-decoration-size) / 2 + var(--custom-message-avatar-size) / 2);
    }

    .c19a557985eb7793-contents>.c19a557985eb7793-messageContent {
      border-radius: 10px 0px 0px 10px;
      background-color: var(--brand-500);
    }

    &._5126c0cd07f243a0-groupStart .c19a557985eb7793-messageContent {
      border-radius: 10px 10px 0px 10px;
    }

    .b7e1cb0370c2dd0e-container>* {
      justify-self: end !important;
      align-self: end !important;
    }

    ._8e5774737a01bb03-container {
      justify-self: end;
    }

    .f4758a8d6346d18b-visualMediaItemContainer {
      width: auto;
    }

    .c19a557985eb7793-contents {
      justify-self: end;
    }

    &.c19a557985eb7793-hasReply {
      padding-top: 22px;
    }

    .c19a557985eb7793-repliedMessage {
      position: absolute;
      flex-direction: row;
      top: 0px;
      left: auto !important;
      right: calc(var(--custom-message-margin-horizontal) - var(--custom-message-avatar-decoration-size) / 2 + var(--custom-message-avatar-size) / 2);
      margin-right: calc(var(--chat-avatar-size) * 1.5 + 12px);
      max-width: calc(100% - var(--custom-guild-sidebar-width) - var(--custom-guild-list-width) + 32px);
    }

    .c19a557985eb7793-repliedMessageClickableSpine {
      right: calc(var(--chat-avatar-size) / 2 * -1 + var(--gutter) * -1 - 4px);
      left: 100%;
      bottom: -14px;
      border-right: var(--spine-width) solid var(--spine-default);
      border-bottom: 0 solid var(--spine-default);
      border-left: 0 solid var(--spine-default);
      border-top: 2px solid var(--spine-default);
      border-top: var(--spine-width) solid var(--spine-default);
      border-top-right-radius: 6px;
      border-top-left-radius: 0px;
    }

    /* For some reason the class above doesn't apply for me, so this exists */
    .c19a557985eb7793-messageSpine:before {
      right: calc(var(--chat-avatar-size) / 2 * -1 + var(--gutter) * -1 - 18px);
      left: 100%;
      bottom: -14px;
      border-right: var(--spine-width) solid var(--spine-default);
      border-bottom: 0 solid var(--spine-default);
      border-left: 0 solid var(--spine-default);
      border-top: 2px solid var(--spine-default);
      border-top: var(--spine-width) solid var(--spine-default);
      border-top-right-radius: 6px;
      border-top-left-radius: 0px;
      margin-left: 4px;
    }
  }

  .c19a557985eb7793-buttonContainer {
    right: auto;
    left: 0;

    ._040f07d21e1fb0d6-container {
      right: auto;
      left: 56px;
    }
  }

  ._23977d5b7cef7361-reactions {
    align-content: flex-end;
    justify-content: flex-end;
  }

  .c19a557985eb7793-cozy .c19a557985eb7793-header {
    display: flex;
    flex-direction: row-reverse;
    align-items: baseline;
  }
  .c19a557985eb7793-cozy .c19a557985eb7793-headerText {
    margin-right: 0;
    margin-left: 0.25em;
  }
  .c19a557985eb7793-cozy .c19a557985eb7793-timestamp {
    margin-left: 0;
    margin-right: 0.25em;
  }
}

.vc-reply-timestamp {
  margin: 0;
}

